k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prices-api
  labels:
    app: prices-api
    environment: production
